examples/Passing/Compound/simple2.c
int main () {
    if (0) {
        return 10;
    }
    else {
        return 5;
    }
}
