examples/Failing/Compound/extra.c
int main() {
    if(0 == 0){
        return 5;
    }}
    return 5;
}
